apps/webapp/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - host: webapp.marokiki.net
    http:
      paths:
      - path: /app1
        backend:
          serviceName: http-service
          servicePort: 80
  - host: webapp.marokiki.net
    http:
      paths:
      - path: /app2
        backend:
          serviceName: http-service
          servicePort: 80
